# grassgp

./: .gitignore  Manifest.toml  Project.toml  README.md  flake.nix  pyproject.toml  setup.cfg  shell.nix
_research/: analyse.py  config.yaml  generate_dataset.py  gpsr_cylinder_example_working-kron_chol_version_comparison.py  gpsr_cylinder_example_working.py  gpsr_cylinder_example_working_old.py  grass_likelihood.ipynb  grass_likelihood.py  hmc_log.txt  plate_means.ipynb  samples_data.npz  savvas_example.py  savvas_example_analysis.py  savvas_example_job_launcher-closer-to-savvas.py  tangent_likelihood_model.py  tangent_space_model-Copy1.py  tangent_space_model.py  train.py  train_job_launcher.py  training_test_data.npz
_research/attempt_at_original_problem/: original_problem_gpsr_version.py
_research/datasets/: training_test_data_gpsr_example.npz
examples/: savvas_example.ipynb  savvas_example_optimised.ipynb  savvas_example_optimised_analysis.py
examples/bayes_opt_example/: basic_bayes_opt.py  utils.py
examples/gpsr_gr_2_1_example/: cylinder_example_exact_anchor_point_comp.ipynb  working_version_cylinder.py
examples/paper_examples/: working_version_cylinder.py
examples/parametrised_ode_example/: convert-data-to-numpy.jl  matern_ode.jl  multirun-analysis.ipynb  results-for-thesis.ipynb  results.ipynb  results.py  train_analyse.py  train_analyse_matern.ipynb  train_analyse_matern.py
examples/parametrised_pde_example/: Untitled.ipynb  Untitled1.ipynb  Ws.npz  analyse.ipynb  debugging_predictions.py  generate_data.jl  generate_data_ode.ipynb  generate_data_ode_matern.ipynb  matern-KL.ipynb  matern_ode.jl  matern_pde_data.jld  results.py  results_less_train_pts.py  results_more_train_pts.py  train_analyse.py  train_analyse_matern-float-64.py  train_analyse_matern.py  train_matern.py  xs.npz
examples/visualisation_example/: results.py  train_analyse.py
paper/: article.tex  references.bib  shared.tex  supplement.tex
paper/paper_material/: conclusion.tex  (+4 more)
scripts/: analyse-gpsr-example.py  analyse.py  generate_dataset.py  generate_dataset_test.py  get_config_and_data_and_plot.py  job_launcher.py  train.py  train_job_launcher-gpsr-example.py  train_job_launcher.py  untitled.py  untitled1.py
tests/: test_grass.py  test_kernels.py  test_models.py  test_utils.py
(+671 files in other folders)
