[tool.poetry]
name = "grassgp"
version = "0.1.0"
description = "Code for dimension-reduction project"
authors = ["Yanni Papandreou <nepo1y@gmail.com>"]
readme = "README.md"
packages = [{include = "grassgp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.3.23"
jaxlib = "^0.3.22"
numpyro = "^0.10.1"
pymanopt = "^2.0.1"
mlkernels = "^0.3.6"
matplotlib = "^3.6.1"
seaborn = "^0.12.0"
hydra-zen = "^0.8.0"
beartype = "^0.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
