[tool.poetry]
name = "grassgp"
version = "0.1.0"
description = "Code for dimension-reduction project"
authors = ["Yanni Papandreou <nepo1y@gmail.com>"]
readme = "README.md"
packages = [{include = "grassgp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpyro = {git = "https://github.com/pyro-ppl/numpyro"}
mlkernels = "^0.3.6"
pymanopt = "^2.0.1"
hydra-zen = "^0.8.0"
beartype = "^0.11.0"
graphviz = "^0.20.1"
chex = "^0.1.5"
rieoptax = {git = "https://github.com/SaitejaUtpala/rieoptax.git"}
statsmodels = "^0.13.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
jupytext = "^1.14.4"
jupyterlab-lsp = "^3.10.2"
jupyterlab-vim = "^0.15.1"
papermill = "^2.4.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
