[metadata]
name = grassgp
version = 0.1.0
author = Yanni Papandreou
author_email = john.papandreou18@imperial.ac.uk
description = Bayesian active subspace learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YanniPapandreou/grassgp
project_urls =
    Bug Tracker = https://github.com/YanniPapandreou/grassgp/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
